--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
               address3: 'title3',
               address4: 'title4',
               address5: 'title5',
-              address6: '<p>Betrayed my love, forced me to leave, and finally I knew the truth, my tears fell, betrayed my love, you have a conscience debt, no matter how much love you pay, you can’t buy it back</p>',
+              address6: 'Betrayed my love, forced me to leave, and finally I knew the truth, my tears fell, betrayed my love, you have a conscience debt, no matter how much love you pay, you can’t buy it back',
               address7: 'content abc xyz',
               address8: 'content 123 456 abc xyz'
             };
